button and checkbox color

--- a/mynavbar.html
+++ b/mynavbar.html
@@ -192,45 +192,45 @@
           </form>  
           <ul class="navbar-nav">
               <li class="navbar-item">
-                <button class="btn btn-success btn-sm" type="button" onclick="flyTo()">
+                <button class="btn  btn-sm" type="button" onclick="flyTo()">
                   <i class="fa fa-map"></i>
                   Map
                 </button>
               </li>
               <li class="navbar-item">
-                <button class="btn btn-sm btn-success" type="button" id="searchbtn"  onclick="CallSearch()">
+                <button class="btn btn-sm " type="button" id="searchbtn"  onclick="CallSearch()">
                   <i class="fa fa-map-signs"></i>
                   MapPlaces</button>
               </li>     
               <li class="navbar-item">
-                <button class="btn btn-sm btn-success" type="button" onclick="setViewAllMarkers()">
+                <button class="btn btn-sm " type="button" onclick="setViewAllMarkers()">
                   <i class="fa fa-skyatlas"></i>
                   View all markers
                 </button>
               </li>
               <li class="navbar-item">
-                <button class="btn btn-sm btn-success" type="button" onclick="ToggleStreetView()">
+                <button class="btn btn-sm " type="button" onclick="ToggleStreetView()">
                   <i class="fa fa-street-view fa-sm"></i> Street View</button>
               </li>
               <li class="navbar-item my-check-box">
                 <input type="checkbox" onclick=onCheckChanged(this) id="Radar"  value="Radar"></input>     
-                <label for="Radar" class="btn-success"> Radar</label><br>
+                <label for="Radar"> Radar</label><br>
               </li> 
               <li class="navbar-item my-check-box">
                 <input type="checkbox"  onclick=onCheckChanged(this) id="Traffic" value="Trf"></input>
-                <label for="Traffic" class="btn-success"> Show Current Traffic</label><br>
+                <label for="Traffic" > Show Current Traffic</label><br>
               </li>
               <li class="navbar-item my-check-box">
                 <input type="checkbox" onclick=onCheckChanged(this) id="ViewAsMap" value="asmap"></input>
-                <label for="ViewAsMap" class="btn-success"> Toggle Map as Roadmap or Satellite</label><br>
+                <label for="ViewAsMap" > Toggle Map as Roadmap or Satellite</label><br>
               </li>
               <li class="navbar-item my-check-box">
                   <input type="checkbox" onclick=onCheckChanged(this) id="ViewAsHybredOrTerrain" value="ashyte"></input>
-                  <label for="ViewAsHybredOrTerrain" class="btn-success"> Toggle Map as hybred or terrain</label><br>
+                  <label for="ViewAsHybredOrTerrain"> Toggle Map as hybred or terrain</label><br>
               </li>
               <li class="navbar-item my-check-box">
                 <input type="checkbox"  onclick=onCheckChanged(this) id="Test" value="Test"></input>
-                <label for="Test" class="btn-success"> Test</label><br>
+                <label for="Test" > Test</label><br>
               </li>
           </ul>
           </div>
