--- a/mynavbar.html
+++ b/mynavbar.html
@@ -193,8 +193,8 @@
           <ul class="navbar-nav">
               <li class="navbar-item">
                 <button class="btn  btn-sm" type="button" onclick="flyTo()">
-                  <i class="fa fa-map"></i>
-                  Map
+                  <img class="fa" src="images/map2.png"></img>
+                  Go (above)
                 </button>
               </li>
               <li class="navbar-item">
