--- a/mynavbar.html
+++ b/mynavbar.html
@@ -112,8 +112,7 @@
           {
           }
         }
-        
-        collapse();
+        // toggleDiv     ('my-nav-div','nothing')
       }
       function onOptionClick(opt)
       {
@@ -139,8 +138,8 @@
       }
       function ToggleStreetView()
       {
-        alert("toggle street view");
-          //streetView("use", "center");
+        alert    ("toggle street view");
+        toggleDiv('my-nav-div','nothing')
       }
       function flyTo() 
       {
