--- a/4_4_flexbox.html
+++ b/4_4_flexbox.html
@@ -99,7 +99,7 @@
 
     <!-- FLEX ROW & FLEX ITEMS -->
     <div class="d-flex flex-row row-hl">
-      <div class="p-4 item-hl">Flex Item</div>
+      <div class="p-4 item-hl">1Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
     </div>
@@ -109,7 +109,7 @@
 
     <!-- FLEX ROW REVERSE -->
     <div class="d-flex flex-row-reverse row-hl">
-      <div class="p-4 item-hl">Flex Item</div>
+      <div class="p-4 item-hl">2Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
     </div>
@@ -119,7 +119,7 @@
 
     <!-- JUSTIFY CONTENT - CONTENT START -->
     <div class="d-flex justify-content-start row-hl">
-      <div class="p-4 item-hl">Flex Item</div>
+      <div class="p-4 item-hl">3Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
     </div>
@@ -129,7 +129,7 @@
 
     <!-- JUSTIFY CONTENT - CONTENT CENTER -->
     <div class="d-flex justify-content-center row-hl">
-      <div class="p-4 item-hl">Flex Item</div>
+      <div class="p-4 item-hl">4Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
     </div>
@@ -139,7 +139,7 @@
 
     <!-- JUSTIFY CONTENT - CONTENT END -->
     <div class="d-flex justify-content-end row-hl">
-      <div class="p-4 item-hl">Flex Item</div>
+      <div class="p-4 item-hl">5Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
     </div>
@@ -149,7 +149,7 @@
 
     <!-- JUSTIFY CONTENT - CONTENT AROUND -->
     <div class="bg-info d-flex justify-content-around">
-      <div class="p-4 item-hl">Flex Item</div>
+      <div class="p-4 item-hl">6Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
     </div>
@@ -159,7 +159,7 @@
 
     <!-- JUSTIFY CONTENT - CONTENT BETWEEN -->
     <div class="bg-secondary d-flex justify-content-between">
-      <div class="p-4 item-hl">Flex Item</div>
+      <div class="p-4 item-hl">7Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
     </div>
@@ -169,7 +169,7 @@
 
     <!-- FLEX COLUMN -->
     <div class="row-hl d-flex flex-column bg-secondary">
-      <div class="p-4 item-hl">Flex Item</div>
+      <div class="p-4 item-hl">8Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
     </div>
@@ -179,7 +179,7 @@
 
     <!-- FLEX COLUMN REVERSE -->
     <div class="d-flex flex-column-reverse active">
-      <div class="p-4 item-hl">Flex Item A</div>
+      <div class="p-4 item-hl">9Flex Item A</div>
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
     </div>
@@ -189,7 +189,7 @@
 
     <!-- VERTICAL ALIGN ITEMS - START -->
     <div class="d-flex align-items-start bg-warning">
-      <div class="p-4 item-hl">Flex Item start</div>
+      <div class="p-4 item-hl">AFlex Item start</div>
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item start</div>
@@ -205,7 +205,7 @@
 
     <!-- VERTICAL ALIGN ITEMS - CENTER -->
     <div class="row-hl d-flex align-items-center">
-      <div class="p-4 item-hl">Flex Item center</div>
+      <div class="p-4 item-hl">BFlex Item center</div>
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
     </div>
@@ -215,7 +215,7 @@
 
     <!-- VERTICAL ALIGN ITEMS - END -->
     <div class="d-flex align-items-end bg-warning">
-      <div class="p-4 item-hl">Flex Item T</div>
+      <div class="p-4 item-hl">CFlex Item T</div>
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
     </div>
@@ -225,7 +225,7 @@
 
     <!-- VERTICAL ALIGN ITEMS - BASELINE -->
     <div class="d-flex align-items-baseline row-hl">
-      <div class="p-4 item-hl">Flex Item baseline</div>
+      <div class="p-4 item-hl">DFlex Item baseline</div>
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
     </div>
@@ -235,7 +235,7 @@
 
     <!-- VERTICAL ALIGN ITEMS - STRETCH -->
     <div class="row-hl d-flex align-items-stretch">
-      <div class="p-4 item-hl">Flex Item stretch</div>
+      <div class="p-4 item-hl">HFlex Item stretch</div>
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
     </div>
@@ -245,7 +245,7 @@
 
     <!-- ALIGN SELF -->
     <div class="row-hl d-flex">
-      <div class="p-4 item-hl align-self-start">Flex Item self on item</div>
+      <div class="p-4 item-hl align-self-start">IFlex Item self on item</div>
       <div class="p-4 item-hl align-self-center">Flex Item</div>
       <div class="p-4 item-hl align-self-stretch">Flex Item stretch</div>
       <div class="p-4 item-hl">Flex Item</div>
